--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: publish
 
 on:
     workflow_run:
@@ -21,7 +21,7 @@ jobs:
             -   run: npm run build
             -   uses: actions/upload-artifact@v3
                 with:
-                    name: cc-package
+                    name: conventional-commit-package
                     path: lib
                     retention-days: 1
 
@@ -35,8 +35,8 @@ jobs:
                     registry-url: https://npm.pkg.github.com/
             -   uses: actions/download-artifact@v3
                 with:
-                    name: cc-package
+                    name: conventional-commit-package
                     path: lib
             -   run: npm publish ./lib
                 env:
-                    NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+                    NODE_AUTH_TOKEN: ${{secrets.PAT}}
