--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Check if your PR commits matching with conventionalcommits",
   "main": "lib/main.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node ./setup-package-json.js",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
@@ -41,6 +41,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.6.0",
+    "fs": "^0.0.1-security",
     "husky": "^8.0.3",
     "jest": "^27.2.5",
     "js-yaml": "^4.1.0",
