--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "all": "npm run build && npm run package && npm test",
     "prepare": "husky install"
   },
   "repository": {
@@ -30,17 +27,11 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0"
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.53.0",
-    "eslint-plugin-github": "^4.10.1",
-    "eslint-plugin-jest": "^27.6.0",
     "fs": "^0.0.1-security",
     "husky": "^8.0.3",
     "jest": "^27.2.5",
