feat: Added scope_required property

--- a/action.yml
+++ b/action.yml
@@ -21,8 +21,12 @@ inputs:
     description: "allow different types in commit message"
     required: false
   scopes:
-    default: ".*"
+    default: "*"
     description: "allow different scopes in commit message"
+    required: false
+  scope_required:
+    default: "false"
+    description: "allow required scope in commit message"
     required: false
 outputs:
   breaking_commit:
